======== IMPORTANT: rename this, and add a new "Future" section, BEFORE ========
======== making a new DFHack release, even if the only changes made     ========
======== were in submodules with their own changelogs!                  ========
================================================================================

# Future

## New Tools

## New Features

## Fixes
- `stockpiles`: fix one-off error in item type when importing furniture stockpile settings
- `dig-now`: fix cases where boulders/rough gems of incorrect material were being generated when digging through walls
- `dig-now`: properly generate ice boulders when digging through ice walls

## Misc Improvements
- `spectate`: show dwarves' activities (like prayer)

## Documentation

## API
- ``Military`` module: added ``addToSquad`` function

## Lua
- ``dfhack.military.addToSquad``: expose Military API function

## Removed

# 51.10-r1

## Misc Improvements
- Compatibility with DF 51.10

# 51.09-r1

## New Features
- `gui/journal`: Ctrl-j hotkey to launch `gui/journal` now works in adventure mode!

## Fixes
- Fix processing error in the overlay that displays unit preferences in the baron selection list

## API
- ``Filesystem`` module: rewritten to use C++ standard library components, for better portability

# 51.08-r1

## Misc Improvements
- Compatibility update for DF 51.08

# 51.07-r1

## New Features
- `spectate`: can now specify number of seconds (in real time) before switching to follow a new unit
- `spectate`: new "cinematic-action" mode that dynamically speeds up perspective switches based on intensity of conflict
- `spectate`: new global keybinding for toggling spectate mode: Ctrl-Shift-S
- `spectate`: new overlay panel that allows you to cycle through following next/previous units (regardless of whether spectate mode is enabled)
- `gui/sitemap`: is now the official "go to" tool. new global hotkey for fort and adventure mode: Ctrl-G

## Fixes